--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next-auth": "5.0.0-beta.25",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "sass": "^1.82.0",
     "zod": "^3.23.3"
   },
   "devDependencies": {
